Ref #691: Allow to enable manually the code assistance